# vms-client

./: .gitignore  CLAUDE.md  COMMANDS.md  components.json  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docker/: linux-build.Dockerfile
docs/: plan.md  supervision-visual-system.html  swagger.json  video-streaming-architecture.md  webview-video-problem.md
scripts/: build-linux.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  live_mjpeg.rs  main.rs  secure_store.rs  tofu.rs
src/api/: auth.ts  cameras.ts  client.ts  discovery.ts  events.ts  health.ts  mjpeg.ts  playback.ts  schema.ts  streams.ts  tauri-fetch.ts  users.ts
src/components/: ErrorBoundary.tsx
src/components/auth/: LoginForm.tsx  RequireAuth.tsx  TOFUDialog.tsx
src/components/camera/: AddCameraDialog.tsx  CameraCard.tsx  CameraHealthBadge.tsx  DeleteCameraDialog.tsx
src/components/camera/discovery/: DiscoveredCameraRow.tsx  DiscoveryDialog.tsx
src/components/dashboard/: PinnedCamerasDialog.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Splash.tsx  TopBar.tsx
src/components/playback/: CameraSelectorPanel.tsx  DateTimePicker.tsx  MultiLaneTimeline.tsx  PlaybackControls.tsx  PlaybackTile.tsx  PlaybackTileGrid.tsx  Timeline.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  tabs.tsx  tooltip.tsx
src/components/users/: AddUserDialog.tsx  DeleteUserDialog.tsx  EditUserDialog.tsx
src/components/video/: ConnectingSplash.tsx  LiveBadge.tsx  LiveMjpegView.tsx  VideoGrid.tsx  VideoPlayer.tsx  VideoTile.tsx
src/hooks/: useAuth.ts  useCameras.ts  useDiscovery.ts  useEventStream.ts  useMjpegToken.ts  usePlayback.ts  useStream.ts  useUsers.ts
src/lib/: codec-label.ts  codec.ts  fingerprint.ts  hls-ready.ts  hls-tauri-loader.ts  platform.ts  secure-store.ts  segment-blob.ts  surveillance-window.ts  tauri-fetch.ts  time.ts  verify-video.ts  whep.ts
src/pages/: CamerasPage.tsx  DashboardPage.tsx  EventsPage.tsx  HealthPage.tsx  LivePage.tsx  LoginPage.tsx  PlaybackPage.tsx  Playground.tsx  SettingsPage.tsx  UsersPage.tsx
src/stores/: auth.ts  events.ts  layouts.ts  liveCodec.ts  pinned.ts  playback.ts  playbackCodec.ts  ui.ts
src/styles/: animations.css  global.css  tokens.css
