[package]
name = "supervision-client"
version = "0.3.3"
description = "Supervision — desktop client for the Supervision VMS"
authors = ["Bipolar Factory"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "supervision_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOFU TLS: we own the HTTP client so we can install a custom rustls cert
# verifier that pins per-host SHA-256 fingerprints. reqwest must use rustls
# (NOT native-tls) so the custom verifier is honored.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json", "stream", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.16"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "fs", "net", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# StreamExt::next on reqwest's response stream for SSE in events.rs.
futures-util = { version = "0.3", default-features = false }
thiserror = "1"
url = "2"

# OS keychain — macOS Keychain, Windows Credential Manager, Linux Secret Service.
# Used by the secure_store commands to keep the session token out of localStorage.
keyring = "3"

